# flake-templates

./: flake.nix
.github/workflows/: check.yml
angular/: .gitignore  flake.nix
haskell-notest/: .gitignore  flake.nix
haskell-notest/app/: Main.hs
presentation/: .gitignore  flake.nix  main.tex
rust/: .gitignore  flake.nix
rust-angular/: .gitignore  flake.nix
rust-angular/backend/: Cargo.toml
rust-angular/backend/src/: main.rs
